<resources>
    <string name="app_name">Snews</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Comprehensive</string>
    <string name="slide_1_desc">We collect the best pieces from around the web and combine them into a story.</string>

    <string name="slide_2_title">Twice a day</string>
    <string name="slide_2_desc">Top stories delivered to you twice a daily at times you choose</string>

    <string name="slide_3_title">Definitive</string>
    <string name="slide_3_desc">We surface the most important need-to-know news</string>

    <string-array name="news_source">
        <item>Adventure</item>
        <item>Atlantic</item>
        <item>Bloomberg</item>
        <item>CNN</item>
        <item>Entertainment</item>
        <item>ESPN</item>
        <item>Food</item>
        <item>Hiking</item>
        <item>News</item>
        <item>Photo</item>
        <item>Quartz</item>
        <item>Top</item>
    </string-array>
    <integer-array name="source_icon">
        <item>@drawable/icon_adventure</item>
        <item>@drawable/icon_adventure</item>
        <item>@drawable/icon_atlantic</item>
        <item>@drawable/icon_bloomberg</item>
        <item>@drawable/icon_cnn</item>
        <item>@drawable/icon_entertainment</item>
        <item>@drawable/icon_espn</item>
        <item>@drawable/icon_food</item>
        <item>@drawable/icon_hiking</item>
        <item>@drawable/icon_news</item>
        <item>@drawable/icon_photo</item>
        <item>@drawable/icon_quartz</item>
        <item>@drawable/icon_top</item>
    </integer-array>

    <!-- Bottom navigation tabs title -->
    <string name="for_you_tab">For You</string>
    <string name="favorites_tab">Favorites</string>
    <string name="explore_tab">Explore</string>
    <string name="search_tab">Search</string>
    <string name="saved_tab">Saved</string>
    <string name="search_title">Find topics of interest</string>
    <string name="search_hint">Search for sources, topics ...</string>
    <string name="explore_sub_title">See trending news sources</string>
    <string name="trending">TRENDING</string>
    <string name="politics">POLITICS</string>
    <string name="world">World</string>
    <string name="sports">SPORTS</string>
    <string name="EUROPE">Europe</string>
    <string name="africa">AFRICA</string>
    <string name="tap_one">Tap at least one to continue</string>
    <string name="pick_favourites">PICK YOUR FAVOURITES</string>


</resources>
